[package]
name = "kbnt"
version = "0.1.0"
edition = "2024"

[dependencies]
cuid2 = "0.1.4"
futures-util = "0.3.32"
itertools = "0.14.0"
network-tables = { git = "https://github.com/tsar-boomba/network-tables-rs", version = "0.1.3", features = ["client-v4"] }
rmpv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.8.9"
tauri-winrt-notification = "0.7.2"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
wmi = "0.18.3"
